[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poa_view"
version = "0.1.0"
description = "A Python viewer for Player One Astronomy Cameras using pyqtgraph"
authors = [
  { name = "User", email = "user@example.com" },
]
dependencies = [
    "numpy",
    "pyqtgraph",
    "PyQt5",
    "opencv-python",
]
requires-python = ">=3.8"

[project.scripts]
poa-viewer = "poa_viewer:main"
